--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.10",
     "axios": "^1.8.1",
+    "body-parser": "^1.20.3",
+    "express": "^4.21.2",
     "firebase": "^11.4.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
